Much safer and solid usage of reg.exe